--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -11,17 +11,25 @@
   "dependencies": {
     "@clerk/localizations": "^3.16.0",
     "@clerk/nextjs": "^6.19.4",
+    "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.8.2",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.4",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
